# HackathonII-evolution-of-todo

./: .gitignore  CLAUDE.md  Dtodo_appFREE-SERVICES-SUMMARY.md  MIGRATION-TO-FREE-SERVICES.md  README.md  constitution.md  pyproject.toml  test_add_task.py  test_all_features.py
.claude/: settings.local.json
phase-3/: IMPLEMENTATION_GUIDE.md  README.md  constitution.md
phase-3/backend/: .env  .env.example  QUICKSTART.md  README.md  START-HERE.md  requirements.txt  start.bat  test-api.bat  test-api.sh
phase-3/docs/: CONVERSATION_EXAMPLES.md  TOOL_REFERENCE.md  TROUBLESHOOTING.md
phase-3/frontend/: .env.local.example  DEPENDENCIES.md  README.md  SETUP.md  package-lock.json  package.json
phase-3/specs/: 01-chat-ui-integration.md  02-gemini-agent-setup.md  03-mcp-tools.md  04-chatbot-ui.md  05-natural-language-flows.md
phase-4/: CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  constitution.md
phase-4/docker/: docker-compose.yml
phase-4/k9s/: README.md
phase-4/kubernetes/: ingress.yaml  namespace.yaml
phase-4/scripts/: build-images.sh  cleanup.sh  deploy-local.sh  (+4 more)
phase-5/: .gitignore  CLAUDE.md  DEPLOYMENT-CHECKLIST.md  FREE-ARCHITECTURE.md  FREE-QUICK-START.md  IMPLEMENTATION-SUMMARY.md  PHASE-5-COMPLETE.md  QUICK-START.md  README.md  TROUBLESHOOTING.md  constitution.md
phase2/: DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  README.md  RUN_NOW.md  constitution.md
phase2/backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
phase2/backend/api/: index.py
phase2/backend/src/: crud.py  database.py  main.py  models.py  schemas.py
phase2/backend/src/routers/: tasks.py
specs/: 01-add-task.md  02-delete-task.md  03-update-task.md  04-view-tasks.md  05-mark-complete.md  REVIEW.md
src/: __init__.py  main.py  models.py  todo_manager.py
(+108 files in other folders)
